maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: illegal start of simple expression
   	while (!estFaceMur() && getDirection()==Direction.NORTH) )  {
                                                                 ^